[package]
name = "alvr_events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
