[package]
name = "alvr_gui"
version = "0.1.0"
authors = ["alvr-org"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
settings-schema = { path = "../settings-schema", features = [
    "rename_camel_case",
] }
alvr_common = { path = "../common" }
egui = "0.13"
fluent = "0.16"
fluent-syntax = "0.11"
fluent-langneg = "0.13"
unic-langid = "0.9"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
dark-light = "0.1"
