[package]
name = "alvr_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alvr_common.workspace = true
alvr_gui_common.workspace = true

anyhow = "1"
eframe = "0.26"
futures-util = "0.3.28"
open = "5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
zip = "0.6"
