[package]
name = "alvr_launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_gui_common.workspace = true

anyhow = "1"
eframe = "0.27"
flate2 = "1.0.18"
futures-util = "0.3.28"
ico = "0.3"
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "http2",
] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
zip = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
