[package]
name = "alvr_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux

[dependencies]
alvr_audio.workspace = true
alvr_commands.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_server_data.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

# Basic utilities
chrono = "0.4"
# Serialization
bincode = "1"
serde = "1"
serde_json = "1"
# Networking and async
bytes = "1"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = [
    "http2",
    "server",
    "stream",
    "runtime",
    "tcp",
] }
reqwest = "0.11"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tokio-tungstenite = "0.18"
tokio-util = { version = "0.7", features = ["codec"] }
# Browser interop
tempfile = "3"
alcro = "0.5.4"
webbrowser = "0.8" # this is just for opening links in the default browser
# Miscellaneous
fern = "0.6"
spin_sleep = "1.1.1"

[build-dependencies]
alvr_filesystem = { path = "../filesystem" }
bindgen = "0.64"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
