[package]
name = "alvr_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux

[dependencies]
alvr_audio.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_server_io.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

# Serialization
bincode = "1"
serde = "1"
serde_json = "1"
# Networking and async
bytes = "1"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = [
    "http2",
    "server",
    "stream",
    "runtime",
    "tcp",
] }
reqwest = "0.11"
rosc = "0.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tokio-tungstenite = "0.18"
tokio-util = { version = "0.7", features = ["codec"] }
# Miscellaneous
chrono = "0.4"
fern = "0.6"
spin_sleep = "1.1.1"
sysinfo = "0.28"

[build-dependencies]
alvr_filesystem = { path = "../filesystem" }
bindgen = "0.65"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
