[package]
name = 'alvr_server_bootstrap'
version = '11.0.0-alpha.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
web-view = '^0.6.2' # needs webkit2gtk on linux
alvr_common = { path = '../common' }
single-instance = '^0.1.2'

# [target.'cfg(windows)'.dependencies]
# web-view = { version = '^0.6.2', features = ['edge'] }

[target.'cfg(windows)'.build-dependencies]
winres = '^0.1.11'