[package]
name = 'alvr_server_bootstrap'
version = '13.0.0-alpha.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
single-instance = '^0.1.2'
msgbox = { git = 'https://github.com/bekker/msgbox-rs' } 
alcro = '^0.1.4'
alvr_common = { path = '../common' }

[target.'cfg(windows)'.build-dependencies]
winres = '^0.1.11'
