[package]
name = 'alvr_server_bootstrap'
version = '12.0.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
alcro = '^0.3.3'
alvr_common = { path = '../common' }
single-instance = '^0.1.2'

[target.'cfg(windows)'.build-dependencies]
winres = '^0.1.11'