[package]
name = "alvr_server_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
trace-performance = ["profiling/profile-with-tracy"]

[dependencies]
alvr_adb.workspace = true
alvr_audio.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_server_io.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

ash = "0.38"
bincode = "1"
bytes = "1"
chrono = "0.4"
fern = "0.6"
flume = "0.11"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = [
    "http2",
    "server",
    "stream",
    "runtime",
    "tcp",
] }
mdns-sd = "0.11"
profiling = { version = "1", optional = true }
reqwest = "0.11" # not used but webserver does not work without it. todo: investigate
rosc = "0.10"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tokio-tungstenite = "0.20"
tokio-util = { version = "0.7", features = ["codec"] }
serde = "1"
serde_json = "1"
sysinfo = "0.31"
