[package]
name = "alvr_server_data"
version = "19.0.0-dev03"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[dependencies]
alvr_common = { path = "../common" }
alvr_events = { path = "../events" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }

cpal = "0.14"
rhai = { version = "1", features = ["serde", "sync"] }
serde_json = "1"
tokio = "1"
wgpu = "0.13"
