[package]
name = "alvr_server_data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_events.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

cpal = "0.14"
rhai = { version = "1", features = ["serde", "sync"] }
serde_json = "1"
tokio = "1"
wgpu = "0.14"
