[package]
name = 'alvr_server_driver'
version = '13.0.0-alpha.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
parking_lot = '^0.11.0'
chrono = '^0.4.13'
log = '^0.4.8'
fern = '^0.6.0'
msgbox = { git = 'https://github.com/bekker/msgbox-rs' } 
serde_json = '^1.0.53'
alvr_common = { path = '../common' }
alvr_xtask = { path = '../xtask' }
lazy_static = '^1.4.0'
lazy-static-include = '^3.0'
futures = '^0.3.5'
tokio = '^0.2.22'
warp = '=0.2.3'

[build-dependencies]
walkdir = '^2.3'
cc = { version = '^1.0', features = ["parallel"] }
bindgen = '^0.54.0'
