[package]
name = 'alvr_server_driver'
version = "12.4.1"
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
log = '^0.4.8'
serde_json = '^1.0.53'
fern = '^0.6.0'
alvr_common = { path = '../common' }
lazy_static = '1.4'
lazy-static-include = '^2.3'

[build-dependencies]
walkdir = '^2.3'
cc = {version = '^1.0', features = ["parallel"] }
bindgen = '^0.54.0'
