[package]
name = "alvr_server_driver"
version = "12.5.1"
authors = ["Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde_json = "1"
fern = "0.6"
alvr_common = { path = "../common" }
lazy_static = "1"
lazy-static-include = "3"

[build-dependencies]
walkdir = "2"
cc = {version = "1", features = ["parallel"] }
bindgen = "0.55"
