[package]
name = 'alvr_server_driver_ext'
version = '11.0.0-alpha.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[lib]
crate-type = ['staticlib']

[dependencies]
log = '^0.4.8'
fern = '^0.6.0'
lazy_static = '^1.4'
alvr_common = { path = '../common' }
alvr_xtask = { path = '../xtask' }