[package]
name = "alvr_server_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true

cpal = { version = "0.15", features = ["jack"] }
encoding_rs_io = "0.1"
dirs = "5"
runas = "=1.0"
serde_json = "1"
