[package]
name = "alvr_server_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true

encoding_rs_io = "0.1"
dirs = "6"
runas = "^1.2"                                                                                                                  # version 1.1 is broken
serde_json = "1"
steamlocate = { git = "https://github.com/WilliamVenner/steamlocate-rs.git", rev = "6fc7aeef928a5b9cc40823a02de61ed0cc38a759" }
injectorpp = "0.3.3"
tempfile = "3.20.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"
