[package]
name = "alvr_server_mock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_server_core.workspace = true
alvr_session.workspace = true

mp4 = "0.14"
