[package]
name = "alvr_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
defaults = ["enable-low-latency"] # Android smartphones crashes enabling this feature (https://github.com/PhoneVR-Developers/alvr-cardboard/issues/5)
enable-low-latency = []

[dependencies]
alvr_common.workspace = true

bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema = { git = "https://github.com/zarik5/settings-schema-rs" }

[build-dependencies]
regex = "1"
