[package]
name = "alvr_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true

bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
settings-schema = { git = "https://github.com/alvr-org/settings-schema-rs", rev = "676185f" }

[build-dependencies]
regex = "1"
