[package]
name = "settings-schema"
version = "0.3.1"
authors = ["Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[features]
default = []
rename_camel_case = []
rename_snake_case = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema-derive = { path = "../settings-schema-derive" }

[[example]]
name = "example0"
